[package]
name = "all-fuel-transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperfuel-client = "2.0.0"
hyperfuel-net-types = "2.0.0"
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
